@@ -1,17 +1,21 @@
 package net.backend.questions.softarextask.service.impl;
 
+
 import net.backend.questions.softarextask.dto.UserDto;
+import net.backend.questions.softarextask.exception.ResourceNotFoundException;
 import net.backend.questions.softarextask.model.User;
 import net.backend.questions.softarextask.repository.UserRepository;
 import net.backend.questions.softarextask.service.UserService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import javax.transaction.Transactional;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @Transactional
@@ -26,50 +30,55 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public boolean create(User user) {
-        User userFromDb = userRepository.findByEmail(user.getEmail()).orElse(null);
-        if (userFromDb == null) {
-//            user.setPassword(passwordEncoder.encode(user.getPassword()));
+    public void create(User user) {
+        User byEmail = userRepository.findByEmail(user.getEmail()).orElse(null);
+        if (byEmail == null) {
             userRepository.save(user);
-            return true;
         }
-        return false;
-
     }
 
     @Override
-    public boolean update(User user) {
-        User userFromDb = userRepository.findByEmail(user.getEmail()).orElse(null);
-        if (userFromDb != null) {
-            userRepository.save(user);
-            return true;
-        }
-        return false;
+    public void update(User user, User userFromDb) {
+        userFromDb.setEmail(user.getEmail());
+        userFromDb.setFirstName(user.getFirstName());
+        userFromDb.setLastName(user.getLastName());
+        userFromDb.setNumber(user.getNumber());
+        userRepository.save(userFromDb);
     }
 
     @Override
-    public boolean delete(User user) {
-        User userFromDb = userRepository.findByEmail(user.getEmail()).orElse(null);
-        if (userFromDb != null) {
+    public void delete(User user) {
+        if (userRepository.findByEmail(user.getEmail()).isPresent()) {
             userRepository.delete(user);
-            return true;
+        } else {
+            userRepository.findByEmail(user.getEmail()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
         }
-        return false;
     }
 
     @Override
     public User findById(int id) {
-     return  userRepository.findById(id).orElseThrow();
-
+        return userRepository.findById(id).orElseThrow(() -> new NoSuchElementException("such User with ID{" + id + "} was not found"));
     }
 
     @Override
-    public User findByEmail(String email) {
-        return userRepository.findByEmail(email).orElseThrow(() -> new NoSuchElementException("Email which you enter - not found!"));
+    public UserDto findByIdDto(int id) {
+        User user = userRepository.findById(id).orElseThrow(() -> new NoSuchElementException("such User with ID{" + id + "} was not found"));
+        return modelMapper.map(user, UserDto.class);
     }
 
     @Override
-    public List<UserDto> findAll() {
-        return userRepository.findAll().stream().map(user -> modelMapper.map(user, UserDto.class)).collect(Collectors.toList());
+    public UserDto findByEmail(String email) {
+        User user = userRepository.findByEmail(email).orElseThrow(() -> new NoSuchElementException("such User with email{" + email + "} was not found"));
+        return modelMapper.map(user, UserDto.class);
+    }
+
+    @Override
+    public List<UserDto> findAllDto() {
+        return Optional.of(userRepository.findAll()).orElseThrow(() -> new ResourceNotFoundException("User resource is not found")).stream().map(user -> modelMapper.map(user, UserDto.class)).toList();
+    }
+
+    @Override
+    public List<User> findAll() {
+        return Optional.of(userRepository.findAll()).orElseThrow(() -> new ResourceNotFoundException("User resource is not found"));
     }
 }
